--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -80,5 +80,5 @@ production:
     default:
       uri: <%= ENV['MONGOLAB_URI'] %>
       options:
-        safe: true
+        write: true
         skip_version_check: true
